@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -13,10 +12,10 @@ import org.springframework.web.multipart.MultipartFile;
 public class UploadFileService {
 
 	// Usa la misma ruta que en ResourceWebConfiguration
-	private final String storagePath = "D:/images/";
+	// private final String storagePath = "D:/images/";
 
 	// ruta pruebas en spring
-	// private String folder = "images/";
+	private String folder = "images/";
 
 	// metodo para subir la imagen del producto
 	public String saveImages(MultipartFile file, String nombre) throws IOException {
@@ -25,7 +24,7 @@ public class UploadFileService {
 			byte[] bytes = file.getBytes();
 			// variable de tipo path que redirige al directo
 			// se importa el path de .nio.file
-			Path path = Paths.get(storagePath + nombre + "_" + file.getOriginalFilename());
+			Path path = Path.of(folder + nombre + "_" + file.getOriginalFilename());
 			Files.write(path, bytes);
 			return nombre + "_" + file.getOriginalFilename();
 		}
